--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Grumpy Pants
+title: Karen's Website
 author: Grumpy Person (Karen)
 email: grumpypants18@gmail.ca
 description: > # this means to ignore newlines until "baseurl:"
